--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             <img src="imagens/fotos/interrogacao.gif" class="life" alt="">
             <div class="agradecimento">
                 <p>Será que você acertou??</p>
-                <p>Veremos isso no [nome do local]</p>
-                <p>a grande revelação será feita no dia <p class="data">dd.mm.aaaa</p> às xxh</p>
+                <p>Veremos isso na Rua das Industrias nº 11, Massamá, 2745-838</p>
+                <p>a grande revelação será feita no dia <p class="data">03.02.2024</p> às 16h</p>
                 
                 
                 <div  onclick="muda_pagina('final', 'detalhes')"><p class="seguir">saber mais</p></div>
